--- a/packages/simple-extension-template/template/src/extend/browser/style.less
+++ b/packages/simple-extension-template/template/src/extend/browser/style.less
@@ -1,7 +1,8 @@
 .opensumi-extension-example-container {
-    flex: 1;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    background-color: var(--statusBar-background);
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  flex-direction: column;
+  background-color: var(--panel-background);
 }
